<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2018 Darijo Barucic, Seventoes
  ~
  ~  Licensed under the MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:shrinkColumns="*"
    android:padding="@dimen/default_space_medium">

    <!-- Release Header -->
    <TableRow
        style="@style/DetailsTextHeaderTableRow">

        <TextView
            style="@style/DetailsInfoHeaderText"
            android:text="@string/details_header_release_date"/>

        <TextView
            style="@style/DetailsInfoHeaderText"
            android:text="@string/details_header_release_countries"/>
    </TableRow>

    <!-- Release Info -->
    <TableRow
        style="@style/DetailsTextInfoTableRow">

        <TextView
            style="@style/DetailsInfoDefaultText"
            android:id="@id/details_text_rel_date"
            android:text="@string/details_default_empty"
            android:gravity="start"/>

        <TextView
            style="@style/DetailsInfoDefaultText"
            android:id="@id/details_text_rel_countries"
            android:text="@string/details_default_empty"
            android:ems="20"
            android:gravity="start"/>
    </TableRow>

    <!-- Original Header -->
    <TableRow
        style="@style/DetailsTextHeaderTableRow">

        <TextView
            style="@style/DetailsInfoHeaderText"
            android:text="@string/details_header_orig_title" />

        <TextView
            style="@style/DetailsInfoHeaderText"
            android:text="@string/details_header_orig_lang" />
    </TableRow>


    <!-- Original Info -->
    <TableRow
        style="@style/DetailsTextInfoTableRow">

        <TextView
            style="@style/DetailsInfoDefaultText"
            android:id="@id/details_text_orig_title"
            android:text="@string/details_default_empty"
            android:gravity="start"/>

        <TextView
            style="@style/DetailsInfoDefaultText"
            android:id="@id/details_text_orig_lang"
            android:text="@string/details_default_empty"
            android:gravity="start"/>
    </TableRow>

    <!-- Financial Header -->
    <TableRow
        style="@style/DetailsTextHeaderTableRow">

        <TextView
            style="@style/DetailsInfoHeaderText"
            android:text="@string/details_header_budget" />

        <TextView
            style="@style/DetailsInfoHeaderText"
            android:text="@string/details_header_revenue" />
    </TableRow>


    <!-- Financial Info -->
    <TableRow
        style="@style/DetailsTextHeaderTableRow">

        <TextView
            style="@style/DetailsInfoDefaultText"
            android:id="@id/details_text_budget"
            android:text="@string/details_default_empty"
            android:gravity="start"/>

        <TextView
            style="@style/DetailsInfoDefaultText"
            android:id="@id/details_text_revenue"
            android:text="@string/details_default_empty"
            android:gravity="start"/>
    </TableRow>

</TableLayout>